--- a/web.css
+++ b/web.css
@@ -130,7 +130,7 @@
         <ul>
             <li>Email: <a href="mailto:hodaanaserii@gmail.com" class="email">hodaanaserii@gmail.com</a></li>
             <li>GitHub: <a href="https://github.com/hodanaseri" class="github" target="_blank">hodanaseri</a></li>
-            <li>LinkedIn: <a href="https://linkedin.com/in/hodanaseri" class="linkedin" target="_blank">hodanaseri</a></li>
+            <li>LinkedIn: <a href="https://linkedin.com/in/hoda-naseri" class="linkedin" target="_blank">hoda-naseri</a></li>
         </ul>
     </section>
 
