--- a/web.css
+++ b/web.css
@@ -97,6 +97,9 @@
     </section>
 
     <section id="research">
+        <h2>Research Interests</h2>
+        <Li>Statistical Machine Learning <Li>Applied Statistics <Li>Time Series <Li>Data Mining <Li>Biomedical Data Analysis <Li>Medical Imaging
+
         <h2>Research Experiences</h2>
         <ul>
             <li>
@@ -114,8 +117,6 @@
                 </ul>
             </li>
         </ul>
-        <h2>Research Interests</h2>
-        <Li>Statistical Machine Learning<Li>   <Li>Applied Statistics<Li>   <Li>Time Series<Li>   <Li>Data Mining<Li>   <Li>Biomedical Data Analysis<Li>   <Li>Medical Imaging<Li>
     </section>
 
 <section id="publications">
@@ -135,7 +136,7 @@
     <div style="display: flex; align-items: center; gap: 15px;">
         <!-- Email -->
         <a href="mailto:hodaanaserii@gmail.com" target="_blank">
-            <img src="https://png.pngtree.com/png-vector/20190129/ourmid/pngtree-email-vector-icon-png-image_355828.jpg" alt="Email" width="40" height="40">
+            <img src="https://img.freepik.com/premium-vector/mail-simple-icon-white-mail-icon-black-circle-vector-illustration-stock-image_797523-1729.jpg?w=360" alt="Email" width="40" height="40">
         </a>
 
         <!-- GitHub -->
@@ -150,7 +151,7 @@
 
         <!-- ORCID -->
         <a href="https://orcid.org/0009-0005-5739-7066" target="_blank">
-            <img src="https://www.gov.br/observatorio/es/programas-academicos/posgrado-en-geofisica/imagenes/orcid-id.png/@@images/image.png" alt="ORCID" width="40" height="40">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/ORCID_iD.svg/1024px-ORCID_iD.svg.png" alt="ORCID" width="40" height="40">
         </a>
     </div>
 </section>
