--- a/web.css
+++ b/web.css
@@ -108,15 +108,15 @@
         <h2>Research Experiences</h2>
         <ul>
             <li>
-                <strong>Master’s Thesis:</strong> Melanoma Diagnosis and Malignancy Grading from Multimodal Data Using Deep Learning
+                <strong>Data Scientist:</strong> Razi Hospital, Department of Dermatology
                 <ul>
-                    <li>Developed CNN-based models to integrate dermoscopy and pathology data for more accurate melanoma detection.</li>
-                    <li>Collaborated with Razi Hospital to obtain and process datasets.</li>
+                    <li>Developed CNN-based models to integrate multimodal data for more accurate melanoma detection.</li>
+                    <li>Obtained and process dermoscopic and pathological datasets.</li>
                     </li>Applied deep learning techniques to improve malignancy grading and enhance diagnostic precision.</li>
                 </ul>
             </li>
             <li>
-                <strong>Data Management Researcher</strong> Biobank, National Brain Mapping Laboratory
+                <strong>Data Management Researcher: </strong> the Biobank of National Brain Mapping Lab
                 <ul>
                     <li>Contributed to building an open data platform for neuroimaging datasets.</li>
                 </ul>
@@ -130,6 +130,9 @@
         <li>
             <strong>Diagnosis and Prognosis of Melanoma from Dermoscopy Images Using Machine Learning and Deep Learning:</strong> A Systematic Literature Review  
             <br>Published in BMC Cancer Journal. <a href="https://doi.org/10.1186/s12885-024-13423-y" target="_blank">https://doi.org/10.1186/s12885-024-13423-y</a>
+            </li>
+            <li>
+            <strong> Master’s Thesis:</strong> Melanoma Diagnosis and Malignancy Grading from Multimodal Data Using Deep Learning
         </li>
     </ul>
 </section>
@@ -141,12 +144,12 @@
     <div style="display: flex; align-items: center; gap: 15px;">
         <!-- Email -->
         <a href="mailto:hodaanaserii@gmail.com" target="_blank">
-            <img src="https://img.freepik.com/premium-vector/mail-simple-icon-white-mail-icon-black-circle-vector-illustration-stock-image_797523-1729.jpg?w=360" alt="Email" width="40" height="40">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6r95FHK00_j5iQvGwM2nkCu0-zIXFuUc-fg&s" alt="Email" width="40" height="40">
         </a>
 
         <!-- GitHub -->
         <a href="https://github.com/hodanaseri" target="_blank">
-            <img src="https://banner2.cleanpng.com/20180920/aey/kisspng-scalable-vector-graphics-github-computer-icons-log-github-brand-octacat-social-svg-png-icon-free-down-5ba35d7db54fe5.6273953815374329577427.jpg" alt="GitHub" width="40" height="40">
+            <img src="https://w7.pngwing.com/pngs/914/758/png-transparent-github-social-media-computer-icons-logo-android-github-logo-computer-wallpaper-banner-thumbnail.png" alt="GitHub" width="40" height="40">
         </a>
 
         <!-- LinkedIn -->
