--- a/web.css
+++ b/web.css
@@ -110,14 +110,16 @@
             <li>
                 <strong>Data Scientist:</strong> Razi Hospital, Department of Dermatology
                 <ul>
+
                     <li>Developed CNN-based models to integrate multimodal data for more accurate melanoma detection.</li>
                     <li>Obtained and process dermoscopic and pathological datasets.</li>
-                    </li>Applied deep learning techniques to improve malignancy grading and enhance diagnostic precision.</li>
+                    <li>Applied deep learning techniques to improve malignancy grading and enhance diagnostic precision.</li>
                 </ul>
             </li>
             <li>
                 <strong>Data Management Researcher: </strong> the Biobank of National Brain Mapping Lab
                 <ul>
+
                     <li>Contributed to building an open data platform for neuroimaging datasets.</li>
                 </ul>
             </li>
@@ -144,12 +146,12 @@
     <div style="display: flex; align-items: center; gap: 15px;">
         <!-- Email -->
         <a href="mailto:hodaanaserii@gmail.com" target="_blank">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6r95FHK00_j5iQvGwM2nkCu0-zIXFuUc-fg&s" alt="Email" width="40" height="40">
+            <img src="https://img.icons8.com/?size=512&id=3AYCSzCO85Qw&format=png" alt="Email" width="40" height="40">
         </a>
 
         <!-- GitHub -->
         <a href="https://github.com/hodanaseri" target="_blank">
-            <img src="https://w7.pngwing.com/pngs/914/758/png-transparent-github-social-media-computer-icons-logo-android-github-logo-computer-wallpaper-banner-thumbnail.png" alt="GitHub" width="40" height="40">
+            <img src="https://img.icons8.com/?size=100&id=106562&format=png&color=000000" alt="GitHub" width="40" height="40">
         </a>
 
         <!-- LinkedIn -->
