--- a/web.css
+++ b/web.css
@@ -156,7 +156,7 @@
 
         <!-- LinkedIn -->
         <a href="https://linkedin.com/in/hoda-naseri" target="_blank">
-            <img src="https://www.citypng.com/public/uploads/preview/hd-vector-flat-linkedin-in-round-icon-png-701751695046390m4phkuuiqm.png" alt="LinkedIn" width="40" height="40">
+            <img src="https://img.freepik.com/premium-vector/linkedin-icon_459124-2005.jpg" alt="LinkedIn" width="40" height="40">
         </a>
 
         <!-- ORCID -->
