--- a/web.css
+++ b/web.css
@@ -144,17 +144,17 @@
     <div style="display: flex; align-items: center; gap: 15px;">
         <!-- Email -->
         <a href="mailto:hodaanaserii@gmail.com" target="_blank">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6r95FHK00_j5iQvGwM2nkCu0-zIXFuUc-fg&s" alt="Email" width="40" height="40">
+            <img src="https://img.icons8.com/?size=512&id=3AYCSzCO85Qw&format=png" alt="Email" width="40" height="40">
         </a>
 
         <!-- GitHub -->
         <a href="https://github.com/hodanaseri" target="_blank">
-            <img src="https://w7.pngwing.com/pngs/914/758/png-transparent-github-social-media-computer-icons-logo-android-github-logo-computer-wallpaper-banner-thumbnail.png" alt="GitHub" width="40" height="40">
+            <img src="https://img.icons8.com/?size=100&id=106562&format=png&color=000000" alt="GitHub" width="40" height="40">
         </a>
 
         <!-- LinkedIn -->
         <a href="https://linkedin.com/in/hoda-naseri" target="_blank">
-            <img src="https://www.citypng.com/public/uploads/preview/hd-vector-flat-linkedin-in-round-icon-png-701751695046390m4phkuuiqm.png" alt="LinkedIn" width="40" height="40">
+            <img src="https://www.clipartmax.com/png/middle/95-953748_linkedin-icon-linkedin-character-social-media-icons-linkedin.png" alt="LinkedIn" width="40" height="40">
         </a>
 
         <!-- ORCID -->
