--- a/web.css
+++ b/web.css
@@ -154,7 +154,7 @@
 
         <!-- LinkedIn -->
         <a href="https://linkedin.com/in/hoda-naseri" target="_blank">
-            <img src="https://www.clipartmax.com/png/middle/95-953748_linkedin-icon-linkedin-character-social-media-icons-linkedin.png" alt="LinkedIn" width="40" height="40">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/600px-LinkedIn_logo_initials.png?20140125013055" alt="LinkedIn" width="40" height="40">
         </a>
 
         <!-- ORCID -->
