--- a/web.css
+++ b/web.css
@@ -157,6 +157,16 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/600px-LinkedIn_logo_initials.png?20140125013055" alt="LinkedIn" width="40" height="40">
         </a>
 
+        <!-- ResearchGate -->
+        <a href="https://www.researchgate.net/profile/Hoda-Naseri" target="_blank">
+            <img src="https://cdn.creazilla.com/icons/3201807/researchgate-icon-sm.png" alt="ResearchGate" width="40" height="40">
+        </a>
+
+        <!-- GoogleScholar -->
+        <a href="https://scholar.google.com/citations?user=ZgAsfSQAAAAJ&hl=en&oi=sra" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Google_Scholar_logo.svg/2048px-Google_Scholar_logo.svg.png" alt="GoogleScholar" width="40" height="40">
+        </a>
+
         <!-- ORCID -->
         <a href="https://orcid.org/0009-0005-5739-7066" target="_blank">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/ORCID_iD.svg/1024px-ORCID_iD.svg.png" alt="ORCID" width="40" height="40">
