--- a/web.css
+++ b/web.css
@@ -159,7 +159,7 @@
 
         <!-- ResearchGate -->
         <a href="https://www.researchgate.net/profile/Hoda-Naseri" target="_blank">
-            <img src="https://cdn.creazilla.com/icons/3201807/researchgate-icon-sm.png" alt="ResearchGate" width="40" height="40">
+            <img src="https://help.researchgate.net/hc/article_attachments/17825143633297" alt="ResearchGate" width="40" height="40">
         </a>
 
         <!-- GoogleScholar -->
